# pd-externals

./: .gitmodules  CMakeLists.txt  README.md  help-bbd~.pd  help-bleprect~.pd  help-blepsaw~.pd  help-bleptri~.pd  help-dcremove~.pd  help-delayA~.pd  help-lfos~.pd  help-limit~.pd  help-midiselect.pd  help-miditranspose.pd  help-nlcubic~.pd  help-opl3~.pd  help-robot~.pd  help-tri~.pd
cmake/: FindPkgConfigLibrary.cmake  MingwDLL.cmake  PdDeken.cmake  PdExternal.cmake
scripts/: build-everything.sh
src/blepvco/: bleprect~.cc  blepsaw~.cc  bleptri~.cc  blepvco.cc  blepvco.h  minblep_tables.cc  minblep_tables.h
src/chip/: opl3~.cc
src/chip/opl3/driver/: OPLPatch.cc  OPLPatch.h  OPLSynth.cc  OPLSynth.h
src/chip/opl3/nukedopl/: opl3.h
src/dafx/: bbd~.cc  limit~.cc  robot~.cc
src/fons/: exp2ap.h
src/jpc/: lfos~.cc  midiselect.cc  miditranspose.cc  sincos.cc  tri~.cc
src/stk/: delayA~.cc  nlcubic~.cc
src/swh/: dcremove~.cc
src/util/: dsp.h  dsp.tcc  fftw++.h  midi.h  midi.tcc  pd++.h  pd++.tcc  table_math.h  table_math.tcc
src/util/api/: fftw3mod.h
src/util/dsp/: overlap_add.h  overlap_add.tcc
src/util/filter/: design.h  design.tcc  filter.h  filter.tcc
